--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   flutter_bloc: ^8.1.4
   flutter_map_cancellable_tile_provider: ^2.0.0
   latlong2: ^0.9.0
+  mockito: ^5.4.4
+  build_runner: ^2.4.8
 
 dev_dependencies:
   flutter_test:
